--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#72E1C7</color>
     <color name="colorPrimaryLight">#87FFE3</color>
+    <color name="colorSecondary">#6563FF</color>
     <color name="colorText">#3C3F58</color>
     <color name="colorPrimaryDark">#3B4063</color>
     <color name="colorAccent">#03DAC5</color>
