--- a/app/src/main/res/layout-sw600dp/lamp_view.xml
+++ b/app/src/main/res/layout-sw600dp/lamp_view.xml
@@ -111,7 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"><!--android:visibility="gone"-->
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/constraintLayout7"
