--- a/app/src/main/res/layout-sw600dp/oven_view.xml
+++ b/app/src/main/res/layout-sw600dp/oven_view.xml
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"><!--android:visibility="gone"-->
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
                     <Switch
                         android:id="@+id/oven_switch"
