--- a/app/src/main/res/layout-sw600dp/speaker_view.xml
+++ b/app/src/main/res/layout-sw600dp/speaker_view.xml
@@ -110,7 +110,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-                    android:layout_marginTop="5dp"><!--android:visibility="gone"-->
+                    android:layout_marginTop="5dp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/constraintLayout5"
